# Neural-Network-From-Scratch-in-C-

./: CMakeLists.txt  README.md  build.bat
data/: mnist_subset.csv
include/: activations.hpp  dataset.hpp  matrix.hpp  neural_network.hpp
scripts/: generate_mnist_subset.py
src/: activations.cpp  dataset.cpp  matrix.cpp  neural_network.cpp  train_mnist.cpp  train_xor.cpp
